parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statement -> block_statement
Rule 2     statement -> expression
Rule 3     block_statement -> LBRACE statements RBRACE
Rule 4     enders -> STATEMENT_END
Rule 5     enders -> STATEMENT_END enders
Rule 6     statements1 -> empty
Rule 7     statements1 -> statement
Rule 8     statements1 -> statement enders statements1
Rule 9     statements -> enders statements1
Rule 10    statements -> statements1
Rule 11    empty -> <empty>
Rule 12    paramlist -> ID
Rule 13    paramlist -> empty
Rule 14    paramlist -> ID , paramlist
Rule 15    expression_list -> expression
Rule 16    expression_list -> empty
Rule 17    expression_list -> expression , expression_list
Rule 18    expression0 -> OBJ_BEGIN property_list OBJ_END
Rule 19    expression0 -> expression IN expression
Rule 20    property_list -> empty
Rule 21    property_list -> ID : expression
Rule 22    property_list -> ID : expression , property_list
Rule 23    expression0 -> LSQUARE empty RSQUARE
Rule 24    expression0 -> LSQUARE list_contents RSQUARE
Rule 25    list_contents -> expression
Rule 26    list_contents -> list_contents , expression
Rule 27    expression -> expression0
Rule 28    expression -> expression1
Rule 29    expression0 -> reference0
Rule 30    expression1 -> reference1
Rule 31    expression0 -> FLOAT
Rule 32    expression0 -> INT
Rule 33    expression0 -> LPAREN tuple_contents RPAREN
Rule 34    tuple_contents -> empty
Rule 35    tuple_contents2 -> expression ,
Rule 36    tuple_contents2 -> expression , expression
Rule 37    tuple_contents -> expression , tuple_contents2
Rule 38    tuple_contents -> tuple_contents2
Rule 39    expression0 -> NEW ID LPAREN expression_list RPAREN
Rule 40    expression0 -> FUNCTION LPAREN paramlist RPAREN block_statement
Rule 41    expression0 -> expression0 LPAREN expression_list RPAREN
Rule 42    expression0 -> expression1 LPAREN expression_list RPAREN
Rule 43    expression0 -> LPAREN expression0 RPAREN
Rule 44    expression1 -> LPAREN expression1 RPAREN
Rule 45    expression -> LPAREN expression RPAREN
Rule 46    expression -> expression PLUS expression
Rule 47    expression -> expression AND expression
Rule 48    expression -> expression DIVIDE expression
Rule 49    expression -> expression EQUALS expression
Rule 50    expression -> expression EXPT expression
Rule 51    expression -> expression GE expression
Rule 52    expression -> expression GT expression
Rule 53    expression -> expression LE expression
Rule 54    expression -> expression LT expression
Rule 55    expression -> expression MOD expression
Rule 56    expression -> expression NE expression
Rule 57    expression -> expression OR expression
Rule 58    expression -> expression MINUS expression
Rule 59    expression -> expression TIMES expression
Rule 60    expression -> expression XOR expression
Rule 61    expression -> reference DIVEQUALS expression
Rule 62    expression -> reference MINUSEQUALS expression
Rule 63    expression -> reference PLUSEQUALS expression
Rule 64    expression -> reference TIMESEQUALS expression
Rule 65    expression -> MINUS expression
Rule 66    expression0 -> TRUE
Rule 67    expression0 -> FALSE
Rule 68    expression0 -> NOT expression
Rule 69    expression0 -> STRING
Rule 70    else_if_chain -> ELSE block_statement
Rule 71    else_if_chain -> ELSE IF LPAREN expression RPAREN block_statement
Rule 72    else_if_chain -> ELSE IF LPAREN expression RPAREN block_statement else_if_chain
Rule 73    expression0 -> IF LPAREN expression RPAREN block_statement
Rule 74    expression0 -> IF LPAREN expression RPAREN block_statement else_if_chain
Rule 75    statement -> WHILE LPAREN expression RPAREN block_statement
Rule 76    reference -> reference0
Rule 77    reference -> reference1
Rule 78    reference0 -> ID
Rule 79    reference1 -> expression DOT ID
Rule 80    reference1 -> expression LSQUARE expression RSQUARE
Rule 81    reference0 -> expression LSQUARE expression : expression RSQUARE
Rule 82    reference0 -> expression LSQUARE : RSQUARE
Rule 83    reference0 -> expression LSQUARE : expression RSQUARE
Rule 84    reference0 -> expression LSQUARE expression : RSQUARE
Rule 85    expression0 -> reference ASSIGN expression
Rule 86    statement -> VAR ID
Rule 87    statement -> CONST VAR ID ASSIGN expression
Rule 88    statement -> VAR ID ASSIGN expression
Rule 89    statement -> CONST ID ASSIGN expression
Rule 90    expression0 -> UNDEFINED
Rule 91    statement -> DEL reference1
Rule 92    statement -> PRINT expression
Rule 93    statement -> RETURN expression
Rule 94    statement -> RETURN

Terminals, with rules where they appear

,                    : 14 17 22 26 35 36 37
:                    : 21 22 81 82 83 84
AND                  : 47
ASSIGN               : 85 87 88 89
CONST                : 87 89
DEL                  : 91
DIVEQUALS            : 61
DIVIDE               : 48
DOT                  : 79
ELSE                 : 70 71 72
EQUALS               : 49
EXPT                 : 50
FALSE                : 67
FLOAT                : 31
FUNCTION             : 40
GE                   : 51
GT                   : 52
ID                   : 12 14 21 22 39 78 79 86 87 88 89
IF                   : 71 72 73 74
IN                   : 19
INT                  : 32
LBRACE               : 3
LE                   : 53
LPAREN               : 33 39 40 41 42 43 44 45 71 72 73 74 75
LSQUARE              : 23 24 80 81 82 83 84
LT                   : 54
MINUS                : 58 65
MINUSEQUALS          : 62
MOD                  : 55
NE                   : 56
NEW                  : 39
NOT                  : 68
OBJ_BEGIN            : 18
OBJ_END              : 18
OR                   : 57
PLUS                 : 46
PLUSEQUALS           : 63
PRINT                : 92
RBRACE               : 3
RETURN               : 93 94
RPAREN               : 33 39 40 41 42 43 44 45 71 72 73 74 75
RSQUARE              : 23 24 80 81 82 83 84
STATEMENT_END        : 4 5
STRING               : 69
TIMES                : 59
TIMESEQUALS          : 64
TRUE                 : 66
UNDEFINED            : 90
VAR                  : 86 87 88
WHILE                : 75
XOR                  : 60
error                : 

Nonterminals, with rules where they appear

block_statement      : 1 40 70 71 72 73 74 75
else_if_chain        : 72 74
empty                : 6 13 16 20 23 34
enders               : 5 8 9
expression           : 2 15 17 19 19 21 22 25 26 35 36 36 37 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 62 63 64 65 68 71 72 73 74 75 79 80 80 81 81 81 82 83 83 84 84 85 87 88 89 92 93
expression0          : 27 41 43
expression1          : 28 42 44
expression_list      : 17 39 41 42
list_contents        : 24 26
paramlist            : 14 40
property_list        : 18 22
reference            : 61 62 63 64 85
reference0           : 29 76
reference1           : 30 77 91
statement            : 7 8
statements           : 3 0
statements1          : 8 9 10
tuple_contents       : 33
tuple_contents2      : 37 38

Parsing method: LALR

state 0

    (0) S' -> . statements
    (9) statements -> . enders statements1
    (10) statements -> . statements1
    (4) enders -> . STATEMENT_END
    (5) enders -> . STATEMENT_END enders
    (6) statements1 -> . empty
    (7) statements1 -> . statement
    (8) statements1 -> . statement enders statements1
    (11) empty -> .
    (1) statement -> . block_statement
    (2) statement -> . expression
    (75) statement -> . WHILE LPAREN expression RPAREN block_statement
    (86) statement -> . VAR ID
    (87) statement -> . CONST VAR ID ASSIGN expression
    (88) statement -> . VAR ID ASSIGN expression
    (89) statement -> . CONST ID ASSIGN expression
    (91) statement -> . DEL reference1
    (92) statement -> . PRINT expression
    (93) statement -> . RETURN expression
    (94) statement -> . RETURN
    (3) block_statement -> . LBRACE statements RBRACE
    (27) expression -> . expression0
    (28) expression -> . expression1
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression AND expression
    (48) expression -> . expression DIVIDE expression
    (49) expression -> . expression EQUALS expression
    (50) expression -> . expression EXPT expression
    (51) expression -> . expression GE expression
    (52) expression -> . expression GT expression
    (53) expression -> . expression LE expression
    (54) expression -> . expression LT expression
    (55) expression -> . expression MOD expression
    (56) expression -> . expression NE expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression MINUS expression
    (59) expression -> . expression TIMES expression
    (60) expression -> . expression XOR expression
    (61) expression -> . reference DIVEQUALS expression
    (62) expression -> . reference MINUSEQUALS expression
    (63) expression -> . reference PLUSEQUALS expression
    (64) expression -> . reference TIMESEQUALS expression
    (65) expression -> . MINUS expression
    (18) expression0 -> . OBJ_BEGIN property_list OBJ_END
    (19) expression0 -> . expression IN expression
    (23) expression0 -> . LSQUARE empty RSQUARE
    (24) expression0 -> . LSQUARE list_contents RSQUARE
    (29) expression0 -> . reference0
    (31) expression0 -> . FLOAT
    (32) expression0 -> . INT
    (33) expression0 -> . LPAREN tuple_contents RPAREN
    (39) expression0 -> . NEW ID LPAREN expression_list RPAREN
    (40) expression0 -> . FUNCTION LPAREN paramlist RPAREN block_statement
    (41) expression0 -> . expression0 LPAREN expression_list RPAREN
    (42) expression0 -> . expression1 LPAREN expression_list RPAREN
    (43) expression0 -> . LPAREN expression0 RPAREN
    (66) expression0 -> . TRUE
    (67) expression0 -> . FALSE
    (68) expression0 -> . NOT expression
    (69) expression0 -> . STRING
    (73) expression0 -> . IF LPAREN expression RPAREN block_statement
    (74) expression0 -> . IF LPAREN expression RPAREN block_statement else_if_chain
    (85) expression0 -> . reference ASSIGN expression
    (90) expression0 -> . UNDEFINED
    (30) expression1 -> . reference1
    (44) expression1 -> . LPAREN expression1 RPAREN
    (76) reference -> . reference0
    (77) reference -> . reference1
    (78) reference0 -> . ID
    (81) reference0 -> . expression LSQUARE expression : expression RSQUARE
    (82) reference0 -> . expression LSQUARE : RSQUARE
    (83) reference0 -> . expression LSQUARE : expression RSQUARE
    (84) reference0 -> . expression LSQUARE expression : RSQUARE
    (79) reference1 -> . expression DOT ID
    (80) reference1 -> . expression LSQUARE expression RSQUARE

    STATEMENT_END   shift and go to state 27
    $end            reduce using rule 11 (empty -> .)
    WHILE           shift and go to state 10
    VAR             shift and go to state 25
    CONST           shift and go to state 5
    DEL             shift and go to state 12
    PRINT           shift and go to state 14
    RETURN          shift and go to state 2
    LBRACE          shift and go to state 30
    LPAREN          shift and go to state 24
    MINUS           shift and go to state 17
    OBJ_BEGIN       shift and go to state 18
    LSQUARE         shift and go to state 1
    FLOAT           shift and go to state 33
    INT             shift and go to state 32
    NEW             shift and go to state 13
    FUNCTION        shift and go to state 23
    TRUE            shift and go to state 16
    FALSE           shift and go to state 31
    NOT             shift and go to state 7
    STRING          shift and go to state 11
    IF              shift and go to state 29
    UNDEFINED       shift and go to state 20
    ID              shift and go to state 28

    statements                     shift and go to state 15
    reference1                     shift and go to state 3
    reference                      shift and go to state 4
    block_statement                shift and go to state 19
    statements1                    shift and go to state 8
    enders                         shift and go to state 34
    statement                      shift and go to state 21
    reference0                     shift and go to state 6
    expression1                    shift and go to state 9
    expression0                    shift and go to state 26
    expression                     shift and go to state 35
    empty                          shift and go to state 22

state 1

    (23) expression0 -> LSQUARE . empty RSQUARE
    (24) expression0 -> LSQUARE . list_contents RSQUARE
    (11) empty -> .
    (25) list_contents -> . expression
    (26) list_contents -> . list_contents , expression
    (27) expression -> . expression0
    (28) expression -> . expression1
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression AND expression
    (48) expression -> . expression DIVIDE expression
    (49) expression -> . expression EQUALS expression
    (50) expression -> . expression EXPT expression
    (51) expression -> . expression GE expression
    (52) expression -> . expression GT expression
    (53) expression -> . expression LE expression
    (54) expression -> . expression LT expression
    (55) expression -> . expression MOD expression
    (56) expression -> . expression NE expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression MINUS expression
    (59) expression -> . expression TIMES expression
    (60) expression -> . expression XOR expression
    (61) expression -> . reference DIVEQUALS expression
    (62) expression -> . reference MINUSEQUALS expression
    (63) expression -> . reference PLUSEQUALS expression
    (64) expression -> . reference TIMESEQUALS expression
    (65) expression -> . MINUS expression
    (18) expression0 -> . OBJ_BEGIN property_list OBJ_END
    (19) expression0 -> . expression IN expression
    (23) expression0 -> . LSQUARE empty RSQUARE
    (24) expression0 -> . LSQUARE list_contents RSQUARE
    (29) expression0 -> . reference0
    (31) expression0 -> . FLOAT
    (32) expression0 -> . INT
    (33) expression0 -> . LPAREN tuple_contents RPAREN
    (39) expression0 -> . NEW ID LPAREN expression_list RPAREN
    (40) expression0 -> . FUNCTION LPAREN paramlist RPAREN block_statement
    (41) expression0 -> . expression0 LPAREN expression_list RPAREN
    (42) expression0 -> . expression1 LPAREN expression_list RPAREN
    (43) expression0 -> . LPAREN expression0 RPAREN
    (66) expression0 -> . TRUE
    (67) expression0 -> . FALSE
    (68) expression0 -> . NOT expression
    (69) expression0 -> . STRING
    (73) expression0 -> . IF LPAREN expression RPAREN block_statement
    (74) expression0 -> . IF LPAREN expression RPAREN block_statement else_if_chain
    (85) expression0 -> . reference ASSIGN expression
    (90) expression0 -> . UNDEFINED
    (30) expression1 -> . reference1
    (44) expression1 -> . LPAREN expression1 RPAREN
    (76) reference -> . reference0
    (77) reference -> . reference1
    (78) reference0 -> . ID
    (81) reference0 -> . expression LSQUARE expression : expression RSQUARE
    (82) reference0 -> . expression LSQUARE : RSQUARE
    (83) reference0 -> . expression LSQUARE : expression RSQUARE
    (84) reference0 -> . expression LSQUARE expression : RSQUARE
    (79) reference1 -> . expression DOT ID
    (80) reference1 -> . expression LSQUARE expression RSQUARE

    RSQUARE         reduce using rule 11 (empty -> .)
    LPAREN          shift and go to state 24
    MINUS           shift and go to state 17
    OBJ_BEGIN       shift and go to state 18
    LSQUARE         shift and go to state 1
    FLOAT           shift and go to state 33
    INT             shift and go to state 32
    NEW             shift and go to state 13
    FUNCTION        shift and go to state 23
    TRUE            shift and go to state 16
    FALSE           shift and go to state 31
    NOT             shift and go to state 7
    STRING          shift and go to state 11
    IF              shift and go to state 29
    UNDEFINED       shift and go to state 20
    ID              shift and go to state 28

    reference1                     shift and go to state 3
    reference                      shift and go to state 4
    list_contents                  shift and go to state 38
    reference0                     shift and go to state 6
    expression1                    shift and go to state 9
    expression0                    shift and go to state 26
    expression                     shift and go to state 37
    empty                          shift and go to state 36

state 2

    (93) statement -> RETURN . expression
    (94) statement -> RETURN .
    (27) expression -> . expression0
    (28) expression -> . expression1
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression AND expression
    (48) expression -> . expression DIVIDE expression
    (49) expression -> . expression EQUALS expression
    (50) expression -> . expression EXPT expression
    (51) expression -> . expression GE expression
    (52) expression -> . expression GT expression
    (53) expression -> . expression LE expression
    (54) expression -> . expression LT expression
    (55) expression -> . expression MOD expression
    (56) expression -> . expression NE expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression MINUS expression
    (59) expression -> . expression TIMES expression
    (60) expression -> . expression XOR expression
    (61) expression -> . reference DIVEQUALS expression
    (62) expression -> . reference MINUSEQUALS expression
    (63) expression -> . reference PLUSEQUALS expression
    (64) expression -> . reference TIMESEQUALS expression
    (65) expression -> . MINUS expression
    (18) expression0 -> . OBJ_BEGIN property_list OBJ_END
    (19) expression0 -> . expression IN expression
    (23) expression0 -> . LSQUARE empty RSQUARE
    (24) expression0 -> . LSQUARE list_contents RSQUARE
    (29) expression0 -> . reference0
    (31) expression0 -> . FLOAT
    (32) expression0 -> . INT
    (33) expression0 -> . LPAREN tuple_contents RPAREN
    (39) expression0 -> . NEW ID LPAREN expression_list RPAREN
    (40) expression0 -> . FUNCTION LPAREN paramlist RPAREN block_statement
    (41) expression0 -> . expression0 LPAREN expression_list RPAREN
    (42) expression0 -> . expression1 LPAREN expression_list RPAREN
    (43) expression0 -> . LPAREN expression0 RPAREN
    (66) expression0 -> . TRUE
    (67) expression0 -> . FALSE
    (68) expression0 -> . NOT expression
    (69) expression0 -> . STRING
    (73) expression0 -> . IF LPAREN expression RPAREN block_statement
    (74) expression0 -> . IF LPAREN expression RPAREN block_statement else_if_chain
    (85) expression0 -> . reference ASSIGN expression
    (90) expression0 -> . UNDEFINED
    (30) expression1 -> . reference1
    (44) expression1 -> . LPAREN expression1 RPAREN
    (76) reference -> . reference0
    (77) reference -> . reference1
    (78) reference0 -> . ID
    (81) reference0 -> . expression LSQUARE expression : expression RSQUARE
    (82) reference0 -> . expression LSQUARE : RSQUARE
    (83) reference0 -> . expression LSQUARE : expression RSQUARE
    (84) reference0 -> . expression LSQUARE expression : RSQUARE
    (79) reference1 -> . expression DOT ID
    (80) reference1 -> . expression LSQUARE expression RSQUARE

    STATEMENT_END   reduce using rule 94 (statement -> RETURN .)
    $end            reduce using rule 94 (statement -> RETURN .)
    RBRACE          reduce using rule 94 (statement -> RETURN .)
    LPAREN          shift and go to state 24
    MINUS           shift and go to state 17
    OBJ_BEGIN       shift and go to state 18
    LSQUARE         shift and go to state 1
    FLOAT           shift and go to state 33
    INT             shift and go to state 32
    NEW             shift and go to state 13
    FUNCTION        shift and go to state 23
    TRUE            shift and go to state 16
    FALSE           shift and go to state 31
    NOT             shift and go to state 7
    STRING          shift and go to state 11
    IF              shift and go to state 29
    UNDEFINED       shift and go to state 20
    ID              shift and go to state 28

    reference1                     shift and go to state 3
    reference                      shift and go to state 4
    reference0                     shift and go to state 6
    expression1                    shift and go to state 9
    expression0                    shift and go to state 26
    expression                     shift and go to state 39

state 3

    (30) expression1 -> reference1 .
    (77) reference -> reference1 .

    LPAREN          reduce using rule 30 (expression1 -> reference1 .)
    PLUS            reduce using rule 30 (expression1 -> reference1 .)
    AND             reduce using rule 30 (expression1 -> reference1 .)
    DIVIDE          reduce using rule 30 (expression1 -> reference1 .)
    EQUALS          reduce using rule 30 (expression1 -> reference1 .)
    EXPT            reduce using rule 30 (expression1 -> reference1 .)
    GE              reduce using rule 30 (expression1 -> reference1 .)
    GT              reduce using rule 30 (expression1 -> reference1 .)
    LE              reduce using rule 30 (expression1 -> reference1 .)
    LT              reduce using rule 30 (expression1 -> reference1 .)
    MOD             reduce using rule 30 (expression1 -> reference1 .)
    NE              reduce using rule 30 (expression1 -> reference1 .)
    OR              reduce using rule 30 (expression1 -> reference1 .)
    MINUS           reduce using rule 30 (expression1 -> reference1 .)
    TIMES           reduce using rule 30 (expression1 -> reference1 .)
    XOR             reduce using rule 30 (expression1 -> reference1 .)
    IN              reduce using rule 30 (expression1 -> reference1 .)
    LSQUARE         reduce using rule 30 (expression1 -> reference1 .)
    DOT             reduce using rule 30 (expression1 -> reference1 .)
    STATEMENT_END   reduce using rule 30 (expression1 -> reference1 .)
    $end            reduce using rule 30 (expression1 -> reference1 .)
    RSQUARE         reduce using rule 30 (expression1 -> reference1 .)
    ,               reduce using rule 30 (expression1 -> reference1 .)
    RBRACE          reduce using rule 30 (expression1 -> reference1 .)
    RPAREN          reduce using rule 30 (expression1 -> reference1 .)
    :               reduce using rule 30 (expression1 -> reference1 .)
    OBJ_END         reduce using rule 30 (expression1 -> reference1 .)
    DIVEQUALS       reduce using rule 77 (reference -> reference1 .)
    MINUSEQUALS     reduce using rule 77 (reference -> reference1 .)
    PLUSEQUALS      reduce using rule 77 (reference -> reference1 .)
    TIMESEQUALS     reduce using rule 77 (reference -> reference1 .)
    ASSIGN          reduce using rule 77 (reference -> reference1 .)


state 4

    (61) expression -> reference . DIVEQUALS expression
    (62) expression -> reference . MINUSEQUALS expression
    (63) expression -> reference . PLUSEQUALS expression
    (64) expression -> reference . TIMESEQUALS expression
    (85) expression0 -> reference . ASSIGN expression

    DIVEQUALS       shift and go to state 43
    MINUSEQUALS     shift and go to state 41
    PLUSEQUALS      shift and go to state 40
    TIMESEQUALS     shift and go to state 42
    ASSIGN          shift and go to state 44


state 5

    (87) statement -> CONST . VAR ID ASSIGN expression
    (89) statement -> CONST . ID ASSIGN expression

    VAR             shift and go to state 45
    ID              shift and go to state 46


state 6

    (29) expression0 -> reference0 .
    (76) reference -> reference0 .

    LPAREN          reduce using rule 29 (expression0 -> reference0 .)
    RPAREN          reduce using rule 29 (expression0 -> reference0 .)
    PLUS            reduce using rule 29 (expression0 -> reference0 .)
    AND             reduce using rule 29 (expression0 -> reference0 .)
    DIVIDE          reduce using rule 29 (expression0 -> reference0 .)
    EQUALS          reduce using rule 29 (expression0 -> reference0 .)
    EXPT            reduce using rule 29 (expression0 -> reference0 .)
    GE              reduce using rule 29 (expression0 -> reference0 .)
    GT              reduce using rule 29 (expression0 -> reference0 .)
    LE              reduce using rule 29 (expression0 -> reference0 .)
    LT              reduce using rule 29 (expression0 -> reference0 .)
    MOD             reduce using rule 29 (expression0 -> reference0 .)
    NE              reduce using rule 29 (expression0 -> reference0 .)
    OR              reduce using rule 29 (expression0 -> reference0 .)
    MINUS           reduce using rule 29 (expression0 -> reference0 .)
    TIMES           reduce using rule 29 (expression0 -> reference0 .)
    XOR             reduce using rule 29 (expression0 -> reference0 .)
    IN              reduce using rule 29 (expression0 -> reference0 .)
    LSQUARE         reduce using rule 29 (expression0 -> reference0 .)
    DOT             reduce using rule 29 (expression0 -> reference0 .)
    RSQUARE         reduce using rule 29 (expression0 -> reference0 .)
    ,               reduce using rule 29 (expression0 -> reference0 .)
    STATEMENT_END   reduce using rule 29 (expression0 -> reference0 .)
    $end            reduce using rule 29 (expression0 -> reference0 .)
    RBRACE          reduce using rule 29 (expression0 -> reference0 .)
    :               reduce using rule 29 (expression0 -> reference0 .)
    OBJ_END         reduce using rule 29 (expression0 -> reference0 .)
    DIVEQUALS       reduce using rule 76 (reference -> reference0 .)
    MINUSEQUALS     reduce using rule 76 (reference -> reference0 .)
    PLUSEQUALS      reduce using rule 76 (reference -> reference0 .)
    TIMESEQUALS     reduce using rule 76 (reference -> reference0 .)
    ASSIGN          reduce using rule 76 (reference -> reference0 .)


state 7

    (68) expression0 -> NOT . expression
    (27) expression -> . expression0
    (28) expression -> . expression1
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression AND expression
    (48) expression -> . expression DIVIDE expression
    (49) expression -> . expression EQUALS expression
    (50) expression -> . expression EXPT expression
    (51) expression -> . expression GE expression
    (52) expression -> . expression GT expression
    (53) expression -> . expression LE expression
    (54) expression -> . expression LT expression
    (55) expression -> . expression MOD expression
    (56) expression -> . expression NE expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression MINUS expression
    (59) expression -> . expression TIMES expression
    (60) expression -> . expression XOR expression
    (61) expression -> . reference DIVEQUALS expression
    (62) expression -> . reference MINUSEQUALS expression
    (63) expression -> . reference PLUSEQUALS expression
    (64) expression -> . reference TIMESEQUALS expression
    (65) expression -> . MINUS expression
    (18) expression0 -> . OBJ_BEGIN property_list OBJ_END
    (19) expression0 -> . expression IN expression
    (23) expression0 -> . LSQUARE empty RSQUARE
    (24) expression0 -> . LSQUARE list_contents RSQUARE
    (29) expression0 -> . reference0
    (31) expression0 -> . FLOAT
    (32) expression0 -> . INT
    (33) expression0 -> . LPAREN tuple_contents RPAREN
    (39) expression0 -> . NEW ID LPAREN expression_list RPAREN
    (40) expression0 -> . FUNCTION LPAREN paramlist RPAREN block_statement
    (41) expression0 -> . expression0 LPAREN expression_list RPAREN
    (42) expression0 -> . expression1 LPAREN expression_list RPAREN
    (43) expression0 -> . LPAREN expression0 RPAREN
    (66) expression0 -> . TRUE
    (67) expression0 -> . FALSE
    (68) expression0 -> . NOT expression
    (69) expression0 -> . STRING
    (73) expression0 -> . IF LPAREN expression RPAREN block_statement
    (74) expression0 -> . IF LPAREN expression RPAREN block_statement else_if_chain
    (85) expression0 -> . reference ASSIGN expression
    (90) expression0 -> . UNDEFINED
    (30) expression1 -> . reference1
    (44) expression1 -> . LPAREN expression1 RPAREN
    (76) reference -> . reference0
    (77) reference -> . reference1
    (78) reference0 -> . ID
    (81) reference0 -> . expression LSQUARE expression : expression RSQUARE
    (82) reference0 -> . expression LSQUARE : RSQUARE
    (83) reference0 -> . expression LSQUARE : expression RSQUARE
    (84) reference0 -> . expression LSQUARE expression : RSQUARE
    (79) reference1 -> . expression DOT ID
    (80) reference1 -> . expression LSQUARE expression RSQUARE

    LPAREN          shift and go to state 24
    MINUS           shift and go to state 17
    OBJ_BEGIN       shift and go to state 18
    LSQUARE         shift and go to state 1
    FLOAT           shift and go to state 33
    INT             shift and go to state 32
    NEW             shift and go to state 13
    FUNCTION        shift and go to state 23
    TRUE            shift and go to state 16
    FALSE           shift and go to state 31
    NOT             shift and go to state 7
    STRING          shift and go to state 11
    IF              shift and go to state 29
    UNDEFINED       shift and go to state 20
    ID              shift and go to state 28

    reference1                     shift and go to state 3
    reference                      shift and go to state 4
    reference0                     shift and go to state 6
    expression1                    shift and go to state 9
    expression0                    shift and go to state 26
    expression                     shift and go to state 47

state 8

    (10) statements -> statements1 .

    $end            reduce using rule 10 (statements -> statements1 .)
    RBRACE          reduce using rule 10 (statements -> statements1 .)


state 9

    (28) expression -> expression1 .
    (42) expression0 -> expression1 . LPAREN expression_list RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    ,               reduce using rule 28 (expression -> expression1 .)
    PLUS            reduce using rule 28 (expression -> expression1 .)
    AND             reduce using rule 28 (expression -> expression1 .)
    DIVIDE          reduce using rule 28 (expression -> expression1 .)
    EQUALS          reduce using rule 28 (expression -> expression1 .)
    EXPT            reduce using rule 28 (expression -> expression1 .)
    GE              reduce using rule 28 (expression -> expression1 .)
    GT              reduce using rule 28 (expression -> expression1 .)
    LE              reduce using rule 28 (expression -> expression1 .)
    LT              reduce using rule 28 (expression -> expression1 .)
    MOD             reduce using rule 28 (expression -> expression1 .)
    NE              reduce using rule 28 (expression -> expression1 .)
    OR              reduce using rule 28 (expression -> expression1 .)
    MINUS           reduce using rule 28 (expression -> expression1 .)
    TIMES           reduce using rule 28 (expression -> expression1 .)
    XOR             reduce using rule 28 (expression -> expression1 .)
    IN              reduce using rule 28 (expression -> expression1 .)
    LSQUARE         reduce using rule 28 (expression -> expression1 .)
    DOT             reduce using rule 28 (expression -> expression1 .)
    OBJ_END         reduce using rule 28 (expression -> expression1 .)
    STATEMENT_END   reduce using rule 28 (expression -> expression1 .)
    $end            reduce using rule 28 (expression -> expression1 .)
    RSQUARE         reduce using rule 28 (expression -> expression1 .)
    RBRACE          reduce using rule 28 (expression -> expression1 .)
    RPAREN          reduce using rule 28 (expression -> expression1 .)
    :               reduce using rule 28 (expression -> expression1 .)
    LPAREN          shift and go to state 48

  ! LPAREN          [ reduce using rule 28 (expression -> expression1 .) ]


state 10

    (75) statement -> WHILE . LPAREN expression RPAREN block_statement

    LPAREN          shift and go to state 49


state 11

    (69) expression0 -> STRING .

    LPAREN          reduce using rule 69 (expression0 -> STRING .)
    RPAREN          reduce using rule 69 (expression0 -> STRING .)
    PLUS            reduce using rule 69 (expression0 -> STRING .)
    AND             reduce using rule 69 (expression0 -> STRING .)
    DIVIDE          reduce using rule 69 (expression0 -> STRING .)
    EQUALS          reduce using rule 69 (expression0 -> STRING .)
    EXPT            reduce using rule 69 (expression0 -> STRING .)
    GE              reduce using rule 69 (expression0 -> STRING .)
    GT              reduce using rule 69 (expression0 -> STRING .)
    LE              reduce using rule 69 (expression0 -> STRING .)
    LT              reduce using rule 69 (expression0 -> STRING .)
    MOD             reduce using rule 69 (expression0 -> STRING .)
    NE              reduce using rule 69 (expression0 -> STRING .)
    OR              reduce using rule 69 (expression0 -> STRING .)
    MINUS           reduce using rule 69 (expression0 -> STRING .)
    TIMES           reduce using rule 69 (expression0 -> STRING .)
    XOR             reduce using rule 69 (expression0 -> STRING .)
    IN              reduce using rule 69 (expression0 -> STRING .)
    LSQUARE         reduce using rule 69 (expression0 -> STRING .)
    DOT             reduce using rule 69 (expression0 -> STRING .)
    RSQUARE         reduce using rule 69 (expression0 -> STRING .)
    ,               reduce using rule 69 (expression0 -> STRING .)
    STATEMENT_END   reduce using rule 69 (expression0 -> STRING .)
    $end            reduce using rule 69 (expression0 -> STRING .)
    RBRACE          reduce using rule 69 (expression0 -> STRING .)
    :               reduce using rule 69 (expression0 -> STRING .)
    OBJ_END         reduce using rule 69 (expression0 -> STRING .)


state 12
